apps/passbolt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passbolt
  namespace: passbolt
spec:
  type: ClusterIP
  selector:
    app: passbolt
  ports:
    - port: 443
      targetPort: 443
      name: https
