apps/passbolt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passbolt
  namespace: passbolt
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - passbolt.justinmcintyre.com
      secretName: passbolt-tls
  rules:
    - host: passbolt.justinmcintyre.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passbolt
                port:
                  number: 443
